// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <label
      className="gf-form--has-input-icon"
    >
      <input
        className="gf-form-input width-20"
        onChange={[Function]}
        placeholder="Filter by name or type"
        type="text"
        value=""
      />
      <i
        className="gf-form-input-icon fa fa-search"
      />
    </label>
    <div
      className="page-action-bar__spacer"
    />
  </div>
</div>
`;

exports[`Render should render pending invites button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <label
      className="gf-form--has-input-icon"
    >
      <input
        className="gf-form-input width-20"
        onChange={[Function]}
        placeholder="Filter by name or type"
        type="text"
        value=""
      />
      <i
        className="gf-form-input-icon fa fa-search"
      />
    </label>
    <div
      style={
        Object {
          "marginLeft": "1rem",
        }
      }
    >
      <button
        className="btn toggle-btn active"
        key="users"
        onClick={[MockFunction]}
      >
        Users
      </button>
      <button
        className="btn toggle-btn"
        key="pending-invites"
        onClick={[MockFunction]}
      >
        Pending Invites (
        5
        )
      </button>
    </div>
    <div
      className="page-action-bar__spacer"
    />
  </div>
</div>
`;

exports[`Render should show external user management button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <label
      className="gf-form--has-input-icon"
    >
      <input
        className="gf-form-input width-20"
        onChange={[Function]}
        placeholder="Filter by name or type"
        type="text"
        value=""
      />
      <i
        className="gf-form-input-icon fa fa-search"
      />
    </label>
    <div
      className="page-action-bar__spacer"
    />
    <a
      className="btn btn-success"
      href="some/url"
      target="_blank"
    >
      <i
        className="fa fa-external-link-square"
      />
       
    </a>
  </div>
</div>
`;

exports[`Render should show invite button 1`] = `
<div
  className="page-action-bar"
>
  <div
    className="gf-form gf-form--grow"
  >
    <label
      className="gf-form--has-input-icon"
    >
      <input
        className="gf-form-input width-20"
        onChange={[Function]}
        placeholder="Filter by name or type"
        type="text"
        value=""
      />
      <i
        className="gf-form-input-icon fa fa-search"
      />
    </label>
    <div
      className="page-action-bar__spacer"
    />
    <a
      className="btn btn-success"
      href="org/users/invite"
    >
      <span>
        Invite
      </span>
    </a>
  </div>
</div>
`;
